Incluido função de tela de autenticação

--- a/templates/model-header.html
+++ b/templates/model-header.html
@@ -1,3 +1,6 @@
   <meta charset="UTF-8">
-    <title>Agenda</title>
+  <title>Agenda</title>
+  <div align="right">
+    <a href="/logout">Logout</a>
+  </div>
   <h1>AGENDA</h1>
